fixed convertFileToString(), try catch block had to be added in the main method, not in the method itself