@@ -1,13 +1,22 @@
 import java.io.*;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class Final {
 	public static void main (String[] args) {
 		// convert plaintext.txt to String
-		String plainText = convertFileToString(); //
-		System.out.println(plainText);
+		try {
+			String plainText = convertFileToString(); //
+			System.out.println(plainText);
+		} catch (IOException e){
+			System.out.println("There was an issue finding the plaintext file");
+			e.printStackTrace();
+		}
+
+
 
 		// testing AES()
 		// testAES();
@@ -18,14 +27,10 @@ public class Final {
 	}
 
 	// read a file as String
-	public static String convertFileToString(){
-		String plaintext ="";
-		try {
-			plaintext = new String(Files.readAllBytes(Paths.get("plaintext.txt")));
-		} catch (IOException e){
-			e.printStackTrace();
-		}
-		return plaintext;
+	public static String convertFileToString() throws IOException{
+		Path path = Paths.get("src/main/java/plaintext.txt");
+		String res = Files.readString(path);
+		return res;
 	}
 
 	public static void testAES(){
